# Bard-dev

./: .gitignore
backend/: agent_brainstorm.ipynb  main.py  pyproject.toml
backend/analysis/: music-theory.py  music_theory.py  scale_agent.py
frontend/src/: App.tsx
frontend/src/components/: GuitarNeck.tsx
frontend/src/hooks/: useMidiTrack.ts
frontend/src/pages/: HomePage.tsx  SongPage.tsx
