[project]
name = "bard-v3"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pyguitarpro>=0.9.0",
    "mido>=1.3.0",
    "music21>=10.5.0",
    "supabase>=2.31.0",
    "python-dotenv>=1.2.2",
    "PyJWT>=2.8.0",
]

